snap scroll on mobile/fix main page anim mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,8 +4,8 @@ html{
   height: 100%;
 
   @media screen and (max-width: 768px) {
-    //scroll-snap-type: y mandatory;
-    //scroll-padding-top: 80px;
+    scroll-snap-type: y mandatory;
+    scroll-padding-top: 80px;
   }
 }
 *,
